# docs/swagger.json
@@ -955,6 +955,63 @@
                     }
                 }
             }
+        },
+        "/v1/payment/callback/wechat-pay/notify": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "payment"
+                ],
+                "summary": "Wechat Pay result notification",
+                "responses": {}
+            }
+        },
+        "/v1/payment/wechatpay": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "payment"
+                ],
+                "summary": "create wechat payment",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "product id",
+                        "name": "product_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "enum": [
+                            "app",
+                            "web",
+                            "pc"
+                        ],
+                        "type": "string",
+                        "description": "source",
+                        "name": "source",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.WechatPayCreateResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -1369,6 +1426,49 @@
                 },
                 "total": {
                     "type": "integer"
+                }
+            }
+        },
+        "controllers.WechatPayCreateResponse": {
+            "type": "object",
+            "properties": {
+                "app_id": {
+                    "description": "APPID APP 支付专用，移动应用AppID",
+                    "type": "string"
+                },
+                "code_url": {
+                    "description": "CodeURL Web、PC 支付专用，二维码地址",
+                    "type": "string"
+                },
+                "noncestr": {
+                    "description": "Noncestr APP 支付专用，随机字符串，不长于32位。推荐随机数生成算法",
+                    "type": "string"
+                },
+                "package": {
+                    "description": "Package APP 支付专用，固定值Sign=WXPay",
+                    "type": "string"
+                },
+                "partner_id": {
+                    "description": "PartnerID APP 支付专用，商户号mchid对应的值",
+                    "type": "string"
+                },
+                "payment_id": {
+                    "type": "string"
+                },
+                "prepay_id": {
+                    "description": "PrepayID APP 支付专用，微信返回的支付交易会话ID，该值有效期为2小时。",
+                    "type": "string"
+                },
+                "sandbox": {
+                    "type": "boolean"
+                },
+                "sign": {
+                    "description": "Sign APP 支付专用，签名，使用字段AppID、timeStamp、nonceStr、prepayid计算得出的签名值 注意：取值RSA格式",
+                    "type": "string"
+                },
+                "timestamp": {
+                    "description": "Timestamp APP 支付专用，时间戳 秒级",
+                    "type": "string"
                 }
             }
         },
